--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="orange_800">#EF6C00</color>
     <color name="brown_800">#4E342E</color>
     <color name="blueGray_800">#37474F</color>
+    <color name="low_white">#D8D8D8</color>
 </resources>
