--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Learning_project" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Learning_project" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_800</item>
-        <item name="colorPrimaryVariant">@color/blueGray_800</item>
-        <item name="colorOnPrimary">@color/pink_800</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/green_800</item>
-        <item name="colorSecondaryVariant">@color/orange_800</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="CustomToolbar" parent="Theme.AppCompat">
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 </resources>
