--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toolS="http://schemas.android.com/tools"
     android:id="@+id/drawable_layout_parent"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.AppCompatEditText
+        android:textColor="@color/black"
+        android:text="@string/todo"
+        android:layout_margin="20sp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blue_800"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <TextView
-                android:text="toolBar"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </androidx.appcompat.widget.Toolbar>
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/support_simple_spinner_dropdown_item"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolBar"
-            app:layout_constraintVertical_bias="0.0" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView"
-        app:headerLayout="@layout/activity_main2"
-        app:menu="@menu/navigation_drawer_menu"
-        android:layout_gravity="start"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
-
-    <!--
-    <com.google.android.material.navigation.NavigationView
-        android:layout_gravity="start"
-        app:menu="@menu/navigation_drawer_menu"
-        app:itemTextColor="@color/pink_800"
-        app:itemRippleColor="@color/blueGray_800"
-        app:itemIconSize="22dp"
-        app:itemIconTint="@color/yellow_800"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
-    -->
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:layout_height="wrap_content" />
+    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+        android:id="@+id/autoComplete"
+        android:layout_margin="20dp"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
