--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,10 @@
         android:layout_margin="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+    <MultiAutoCompleteTextView
         android:id="@+id/autoComplete"
         android:layout_margin="20dp"
+        android:hint="@string/test_text"
         android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
